# gazeSwitch

./: CMakeLists.txt  README  README.md  gazeSwitch.cpp  save.cpp  server.py  show.cpp  steps.cpp
Opis/: main.tex  preamble.tex  text.tex
Opis/images/: titlepage.tex
