cmake_minimum_required(VERSION 2.8)
project(steps)
project(show)
project(gazeSwitch)
project(save)
find_package(OpenCV REQUIRED)
find_package(Boost 1.4.0 COMPONENTS filesystem system REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(steps steps.cpp)
add_executable(show show.cpp)
add_executable(gazeSwitch gazeSwitch.cpp)
add_executable(save save.cpp)
target_link_libraries(steps ${OpenCV_LIBS})
target_link_libraries(show ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(show libzmq.so)
target_link_libraries(gazeSwitch ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(gazeSwitch libzmq.so)
target_link_libraries(save ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(save libzmq.so)
target_link_libraries(save ${Boost_LIBRARIES})
